# agents-handbook

./: .env.template  .gitignore  AGENTS.md  README.md
docs/: 09-multi-agent-design.md
docs/agent/: 09-flow-explanation.md  architecture.md  development_commands.md  (+1 more)
langchain-python/: .env.example  04-RAG-QA-COMPLETION.md  NOTEBOOK_UPDATE_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  create_simple_notebooks.py  generate_notebooks.py  pyproject.toml  requirements.txt  start_jupyter.sh  test_all_examples.py  update_notebooks.py
langchain-python/00-env/: README.md  simple_check.py
langchain-python/01-hello-chain/: README.md  hello_chain.ipynb  hello_chain.py
langchain-python/02-prompt-template/: README.md  prompt_template.ipynb  prompt_template.py
langchain-python/03-memory-chat/: README.md  memory_chat.ipynb  memory_chat.py
langchain-python/04-rag-qa/: IMPLEMENTATION.md  README.md  rag_qa.ipynb  rag_qa.py
langchain-python/05-agent-weather/: README.md  agent_weather.ipynb  agent_weather.py  agent_weather_v2.py
langchain-python/06-api-deployment/: Dockerfile  README.md  docker-compose.yml  main.ipynb  main.py  test_api.py
langchain-python/07-advanced-agents/: README.md  advanced_agents.ipynb  advanced_agents.py  advanced_agents_v2.py  agent_comparison.py
langchain-python/08-structured-output/: README.md  structured_output.ipynb  structured_output.py
langchain-python/09-multi-agent/: README-TS-Comparison.md  README.md  SETUP-SUMMARY.md  TESTING.md  graph.py  index.py  langgraph.json  multi_agent_system.ipynb  multi_agent_system.py
langchain-python/09-multi-agent/agents/: __init__.py  base_agent.py  coder_agent.py  researcher_agent.py  reviewer_agent.py  supervisor_agent.py
langchain-python/09-multi-agent/clients/: __init__.py
langchain-python/10-streaming-chat/: README.md  __init__.py  __main__.py  chat_server.ipynb  chat_server.py  models.py
langchain-python/10-streaming-chat/static/: app.js  index.html
langchain-python/11-production-tracing/: README.md  tracing_example.ipynb  tracing_example.py
langchain-python/13-agent-complete/: README.md  graph.py  langgraph.json  test_api.py
langchain-python/13-agent-complete/tools/: index.py
langchain-python/clients/: __init__.py  embedding_client.py  model_client.py  tavily_client.py
langchain-python/temp_docs/: deep_learning.txt  langchain_intro.txt  python_intro.txt
langchain-python/utils/: __init__.py  monitor.py
langchain-typescript/: README.md  package.json  pnpm-lock.yaml  sum_1_to_100_explanation.md
langgraph-typescript/: langgraph.json  package.json  pnpm-lock.yaml  tsconfig.json
python/: README.md  env.yml  pyproject.toml  start_jupyter.sh
python/00-env/: README.md  simple_check.py
python/01-hello-chain/: README.md  hello_chain.ipynb  hello_chain.py
(+67 files in other folders)
